--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -28,24 +28,23 @@
               <td><%=host.duration / 60%> minutes</td>
                 <td>
                 <div class="btn-group">
-                <%= link_to "Consulter la page workout", workout_path(host), class: 'btn btn-success small'%>
-                <%= link_to "Consulter l'edit", edit_workout_reservation_path(host), class: 'btn btn-warning small text-white'%>
-                <%= link_to "Modifier le workout", edit_workout_path(host), class: 'btn btn-danger small'%>
+                <%= link_to "Consulter la page workout", workout_path(host), class: 'btn btn-success'%>
+                <%= link_to "Modifier le workout", edit_workout_path(host), class: 'btn btn-warning  '%>
                 </div>
                 </td>
             </tr>
-            <%@participants.each do |participant|%>
-                 <td><%=participant.email%></td>
-                    <td><%=participant.id%></td>
-                    <td></td>
+            <%host.reservations.each do |participant|%>
+                 <td class="bg-tertiary"></td>
+                    <td><%=participant.user.email%></td>
+                    <td><%=participant.status%></td>
                     <td></td>
                     <td></td>
                     <td></td>
                     <td></td>
                 <td>
                 <div class="btn-group">
-                <%= link_to "Consulter la page Profil", user_path(participant), class: 'btn btn-success small'%>
-                <%= link_to "Accepter/supprimer la reservation", edit_workout_path(host), class: 'btn btn-danger small'%>
+                <%= link_to "Consulter la page Profil", user_path(participant.user), class: 'btn btn-success small'%>
+                <%= link_to "Accepter/refuser la reservation", edit_workout_path(host), class: 'btn btn-danger small'%>
                 </div>
                 </td>
                 </tr>
@@ -54,34 +53,4 @@
           </tbody>
         </table>
     </div>
-</section>
-<section class="container align-items-center justify-content-center shadow rounded py-5">
-<% @hosts.each do |host| %>
-    <div class="card mb-2 border border-2" style="max-width: 100%">
-        <div class="row g-0">
-            <div class="col-md-4">
-                <%= image_tag 'logokeella.png', alt: "workout-image", class: "img-fluid" %>
-            </div>
-                <div class="col-md-8">
-                <div class="card-body">
-                        <h5 class="card-title"><%= host.title %></h5>
-                        <p class="card-text">Adresse : <%= host.location %></p>
-                        <p class="card-text">Prix : <%= host.price %> €</p>
-                        <p class="card-text">Date : <%= host.start_date.strftime("%d %B %Y") %></p>
-                        <p class="card-text">Durée : De <%=host.start_date.strftime("%H:%M")%> à <%=host.end_date.strftime("%H:%M")%> soit <%=host.duration / 60%> minutes</p>
-                        <p class="card-text">Nombre de participant : <%=host.participant_number%></p>
-                        
-                        <p class="card-text"><small class="text-body-secondary">Date de la création <%= host.created_at.strftime("%d/%m/%Y %H:%M") %></small></p>
-                    <div class="row">
-                        <div class="btn-group">
-                            <%= link_to "Consulter la page workout", workout_path(host), class: 'btn btn-success'%>
-                            <%= link_to "Consulter l'edit", edit_workout_reservation_path(host), class: 'btn btn-warning text-white'%>
-                            <%= link_to "Modifier le workout", edit_workout_path(host), class: 'btn btn-danger'%>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-  <% end %>
 </section>
