--- a/app/views/workouts/edit.html.erb
+++ b/app/views/workouts/edit.html.erb
@@ -39,7 +39,7 @@
                 <%= form.label :title, "Titre", class: "floatingInput" %>
                 <%= form.text_field :title, class: "form-control" %>
 
-                <%= form.label :price, "Prix", class: "floatingInput" %>
+                <%= form.label :price, "Prix (€)", class: "floatingInput" %>
                 <%= form.number_field :price, step: "1", class: "form-control" %>
 
                 <%= form.label :description, "Description", class: "floatingInput" %>
