--- a/app/views/workouts/index.html.erb
+++ b/app/views/workouts/index.html.erb
@@ -17,6 +17,11 @@
                                         <%= workout.price %>
                                         <i class="bi bi-currency-euro"></i>
                                     </li>
+
+                                    <li class="list-group-item border-0">
+                                        <i class="bi bi-person-fill"></i>
+                                         Nombre de participants : <%= workout.participant_number %>
+                                    </li>
                       
                                     <li class="list-group-item border-0">
                                         <i class="bi bi-geo-alt"></i>
