--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -16,7 +16,7 @@
         </li>
       </ul>
       <ul class="navbar-nav me-1 mb-2 mb-sm-0">
-          <a href="<%= user_path(current_user.id) %>">
+          <a href="<%= users_path %>">
             <div class="w-100">
               <img alt="32x32" class="mr-2 rounded mb-1 bg-dark" style="width: 32px; height: 32px;" src="../assets/iconeuser.png" data-holder-rendered="true">
             </div>
