--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -4,7 +4,10 @@
 <section class="container shadow rounded py-5">
     <div class="table-responsive small">
         <table class="table table-striped table-sm">
-          <thead>
+
+          <tbody>
+        <%@workouts.each do |workout|%>
+                  <thead>
             <tr>
               <th scope="col">Titre</th>
               <th scope="col">Adresse</th>
@@ -16,24 +19,36 @@
               <th scope="col">Boutons</th>
             </tr>
           </thead>
-          <tbody>
-        <%@hosts.each do |host|%>
+                    <tbody>
         <tr>
-              <td><%=host.title%></td>
-              <td><%=host.location%></td>
-              <td><%=host.price%> €</td>
-              <td><%=host.participant_number%></td>
-              <td><%=host.start_date.strftime("%d %B %Y")%></td>
-              <td>De <%=host.start_date.strftime("%H:%M")%> à <%=host.end_date.strftime("%H:%M")%></td>
-              <td><%=host.duration / 60%> minutes</td>
+              <td><%=workout.title%></td>
+              <td><%=workout.location%></td>
+              <td><%=workout.price%> €</td>
+              <td><%=workout.participant_number%></td>
+              <td><%=workout.start_date.strftime("%d %B %Y")%></td>
+              <td>De <%=workout.start_date.strftime("%H:%M")%> à <%=workout.end_date.strftime("%H:%M")%></td>
+              <td><%=workout.duration / 60%> minutes</td>
                 <td>
                 <div class="btn-group">
-                <%= link_to "Consulter la page workout", workout_path(host), class: 'btn btn-success'%>
-                <%= link_to "Modifier le workout", edit_workout_path(host), class: 'btn btn-warning  '%>
+                <%= link_to "Consulter la page workout", workout_path(workout), class: 'btn btn-success btn-sm'%>
+                <%= link_to "Modifier le workout", edit_workout_path(workout), class: 'btn btn-warning  btn-sm'%>
                 </div>
                 </td>
             </tr>
-            <%host.reservations.each do |participant|%>
+            <thead>
+                <tr>
+                    <th scope="col"></th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Status</th>
+                    <th scope="col"></th>
+                    <th scope="col"></th>
+                    <th scope="col"></th>
+                    <th scope="col"></th>
+                    <th scope="col"></th>
+                </tr>
+            </thead>
+            <tbody>
+            <%workout.reservations.each do |participant|%>
                  <td class="bg-tertiary"></td>
                     <td><%=participant.user.email%></td>
                     <td><%=participant.status%></td>
@@ -43,8 +58,8 @@
                     <td></td>
                 <td>
                 <div class="btn-group">
-                <%= link_to "Consulter la page Profil", user_path(participant.user), class: 'btn btn-success small'%>
-                <%= link_to "Accepter/refuser la reservation", edit_workout_path(host), class: 'btn btn-danger small'%>
+                <%= link_to "Consulter la page Profil", user_path(participant.user), class: 'btn btn-success btn-sm'%>
+                <%= link_to "Accepter/refuser la reservation", edit_user_reservation_path(workout), class: 'btn btn-danger btn-sm'%>
                 </div>
                 </td>
                 </tr>
