--- a/app/views/workouts/index.html.erb
+++ b/app/views/workouts/index.html.erb
@@ -4,9 +4,11 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <% @workouts.each_with_index do |workout, index| %> 
                 <a href="<%= workout_path(workout) %>" class="text-decoration-none">
-                    <div class="card shadow" style="max-width: 40rem; height: 350px;">
-                            <%= image_tag 'logokeella.png', alt: "workout-image", style:"width: 100%; height: 50%; object-fit: cover;"  %>
-                        <div class="card-title-container border rounded p-2">
+                <div class="card shadow" style="max-width: 50rem; height: 450px;">
+                        <div style="height: 200px; overflow: hidden;">
+                            <%= image_tag 'logokeella.png', alt: "workout-image", style:"width: 100%; height: 100%; object-fit: cover;"  %>
+                        </div>
+                            <div class="card-title-container m-1 border rounded p-2">
                                 <h5 class="card-title"><%= workout.title %></h5>
                                     <i class="bi bi-star-fill">Note de l'hote</i>
                         </div>
@@ -19,10 +21,14 @@
                                     </li>
 
                                     <li class="list-group-item border-0">
-                                        <i class="bi bi-person-fill"></i>
-                                         Nombre de participants : <%= workout.participant_number %>
+                                        <% if workout.places_available > 0 %>
+                                            <i class="bi bi-person-fill-check"></i>
+                                        <% else %>
+                                            <i class="bi bi-person-fill-lock"></i>
+                                        <% end %>
+                                            Nombre de places restantes : <%= workout.places_available %>
                                     </li>
-                      
+                                    
                                     <li class="list-group-item border-0">
                                         <i class="bi bi-geo-alt"></i>
                                         <%= workout.city.name %>
