--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -26,7 +26,7 @@
               <td><%=workout.location%></td>
               <td><%=workout.price%> €</td>
               <td><%=workout.participant_number%> personnes</td>
-              <td><%=workout.participant_number.to_i - workout.reservations.count%></td>
+              <td><%=workout.places_available%></td>
               <td><%=workout.start_date.strftime("%d %B %Y")%></td>
               <td>De <%=workout.start_date.strftime("%H:%M")%> à <%=workout.end_date.strftime("%H:%M")%></td>
               <td><%=workout.duration / 60%> minutes</td>
