turbo_stream ok

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body data-turbo="false">
+  <body>
     <%= render "layouts/navbar" %>
     <%= render 'layouts/flash'%>
     <%= yield %>
