--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -14,7 +14,7 @@
                 <div class="col-md-8">
                 <div class="card-body">
                         <h5 class="card-title"><%= reservation.workout.title %></h5>
-                        <p class="card-text">Utilisateur : <%= reservation.user.email %></p>
+                        <p class="card-text">Utilisateur : <%= reservation.workout.host.email %></p>
                         <p class="card-text">Date du début de l'entraînement : <%= reservation.workout.start_date.strftime("%d/%m/%Y %H:%M") %></p>
                         <p class="card-text">Date de fin de l'entraînement : <%= reservation.workout.end_date.strftime("%d/%m/%Y %H:%M") %></p>
                         <p class="card-text">Status : <%= reservation.status %></p>
@@ -22,16 +22,13 @@
                     <div class="row">
                         <div class="btn-group">
                             <% if reservation.status == 'accepted' %>
-                            <%= button_to 'Confirmer fin de séance', reservation_path(reservation, decision: "closed"), method: :patch, class: 'btn btn-primary' %>
-                                <%= button_to 'Annuler', reservation_path(reservation, decision: "cancelled"), method: :patch, class: 'btn btn-danger' %>
+                            <%= button_to 'Confirmer fin de séance', reservation_path(reservation, user_decision: "closed"), method: :patch, class: 'btn btn-primary' %>
+                                <%= button_to 'Annuler', reservation_path(reservation, user_decision: "user_cancelled"), method: :patch, class: 'btn btn-danger' %>
                             <% elsif reservation.status == 'pending' %>
-                                <%= button_to 'Relancer la demande', '#', method: :get, class: 'btn btn-secondary disabled' %>
-                            <% elsif reservation.status == 'refused' %>
-
-                            
+                                <%= button_to 'Relancer la demande', reservation_path(reservation, user_decision: "relaunched"), method: :patch, class: 'btn btn-secondary disabled' %>                            
                             <% elsif reservation.status == 'closed' %>
-                                <%= button_to 'Laisse un commentaire', '#', method: :get, class: 'btn btn-secondary disabled' %>
-                                <%= button_to 'Laisse une note', '#', method: :get, class: 'btn btn-secondary disabled' %>
+                                <%= button_to 'Laisser un commentaire', '#', method: :get, class: 'btn btn-secondary disabled' %>
+                                <%= button_to 'Laisser une note', '#', method: :get, class: 'btn btn-secondary disabled' %>
                             <% end %>
                         </div>
                     </div>
