--- a/app/views/workouts/edit.html.erb
+++ b/app/views/workouts/edit.html.erb
@@ -6,27 +6,48 @@
 <div class="row text-center py-5 bg-tertiary rounded-4 shadow">
     <div class="col-lg-4">
         <div>
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
-            </svg>
+        <%if @workout.image1.attached?%>
+                    <%= image_tag @workout.image1, alt: 'image1',class:"bd-placeholder", width:"300", height:"140" %>
+            <%else%>
+                <svg class="bd-placeholder-img " width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
+                </svg>
+        <% end %>
         </div>
         <p>Image 1</p>
-        <button class="btn btn-outline-secondary" href="#">Upload l'image</button>
+        <%= form_tag workout_image1_index_path(@workout), multipart: true do %>
+            <%= file_field_tag :image1, class:"fs-6 fw-light" %>
+            <%= submit_tag "uploader l'image",class:"btn btn-outline-secondary" %>
+        <% end %>
     </div>
     <div class="col-lg-4">
         <div>
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
-            </svg>
+        <%if @workout.image2.attached?%>
+                    <%= image_tag @workout.image2, alt: 'image2',class:"bd-placeholder", width:"300", height:"140" %>
+            <%else%>
+                <svg class="bd-placeholder-img " width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
+                </svg>
+        <% end %>
         </div>
         <p>Image 2</p>
-        <button class="btn btn-outline-secondary" href="#">Upload l'image</button>
+        <%= form_tag workout_image2_index_path(@workout), multipart: true do %>
+            <%= file_field_tag :image2, class:"fs-6 fw-light" %>
+            <%= submit_tag "uploader l'image",class:"btn btn-outline-secondary" %>
+        <% end %>
     </div>
     <div class="col-lg-4">
         <div>
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
-            </svg>
+        <%if @workout.image3.attached?%>
+                    <%= image_tag @workout.image3, alt: 'image3',class:"bd-placeholder", width:"300", height:"140" %>
+            <%else%>
+                <svg class="bd-placeholder-img " width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
+                </svg>
+        <% end %>
         </div>
         <p>Image 3</p>
-        <button class="btn btn-outline-secondary" href="#">Upload l'image</button>
+        <%= form_tag workout_image3_index_path(@workout), multipart: true do %>
+            <%= file_field_tag :image3, class:"fs-6 fw-light" %>
+            <%= submit_tag "uploader l'image",class:"btn btn-outline-secondary" %>
+        <% end %>
     </div>
 </div>
 </section>
