--- a/app/views/workouts/index.html.erb
+++ b/app/views/workouts/index.html.erb
@@ -6,7 +6,11 @@
                 <a href="<%= workout_path(workout) %>" class="text-decoration-none">
                 <div class="card shadow" style="max-width: 50rem; height: 450px;">
                         <div style="height: 200px; overflow: hidden;">
-                            <%= image_tag 'logokeella.png', alt: "workout-image", style:"width: 100%; height: 100%; object-fit: cover;"  %>
+                            <%if workout.image1.attached?%>
+                                <%= image_tag workout.image1, alt: "workout-image", style:"width: 100%; height: 100%; object-fit: cover;"  %>
+                            <%else%>
+                                <%= image_tag 'logokeella.png', alt: "workout-image", style:"width: 100%; height: 100%; object-fit: cover;"  %>
+                            <% end %>
                         </div>
                             <div class="card-title-container m-1 border rounded p-2">
                                 <h5 class="card-title"><%= workout.title %></h5>
