bug multiple mail for host fixed

--- a/app/views/host_mailer/reservation_request.html.erb
+++ b/app/views/host_mailer/reservation_request.html.erb
@@ -13,7 +13,7 @@
     </p>    
     <a href="<%= user_url(@user) %>">Voir son profil</a>
     <p>
-      Vous pouvez valider, refuser ou voir le profil de l'utilisateur dans la page suivante : <a href="<%= edit_workout_reservation_url(@workout, @reservation) %>"></a>
+      Vous pouvez valider, refuser ou voir le profil de l'utilisateur dans la page suivante : <a href="<%= edit_workout_reservation_url(@workout, @reservation) %>">Répondre à la demande</a>
     </p>
     <p> À très vite sur keella.fly.dev !</p>
   </body>
