--- a/app/views/user_mailer/accepted_email.html.erb
+++ b/app/views/user_mailer/accepted_email.html.erb
@@ -13,6 +13,7 @@
       <li>Vous rendre à la séance</li>
       <li>A la fin de votre séance, veuillez confirmer que vous avez assisté à votre séance afin de remercier l’hote en débloquant votre paiement.</li>
     </ol>
+    <p>Confirmer la fin de ma séance : </p>
     <div>
       <button class="btn btn-primary"><a href="<%= user_reservations_url(@user, @reservation) %>">Confirmer la fin de ma séance</a></button>
     </div>
