--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -13,12 +13,19 @@
             </div>
                 <div class="col-md-8">
                 <div class="card-body">
+                        <p>N° de réservation : <%= reservation.id %></p>
+                    <% if reservation.workout%>
                         <h5 class="card-title"><%= reservation.workout.title %></h5>
                         <p class="card-text">Utilisateur : <%= reservation.workout.host.email %></p>
                         <p class="card-text">Date du début de l'entraînement : <%= reservation.workout.start_date.strftime("%d/%m/%Y %H:%M") %></p>
                         <p class="card-text">Date de fin de l'entraînement : <%= reservation.workout.end_date.strftime("%d/%m/%Y %H:%M") %></p>
+                    <% else %>
+                        <p>L'annonce a été supprimé par son créateur.</p>
+                    <% end%>
                         <p class="card-text">Status : <%= reservation.status %></p>
                         <p class="card-text"><small class="text-body-secondary">Date de la réservation <%= reservation.created_at.strftime("%d/%m/%Y %H:%M") %></small></p>
+                    
+
                     <div class="row">
                         <div class="btn-group">
                             <% if reservation.status == 'accepted' %>
