--- a/app/views/workouts/index.html.erb
+++ b/app/views/workouts/index.html.erb
@@ -1,4 +1,6 @@
 <%= render 'searchbar' %>
+<%# <%= render 'form_date' %> 
+
   
     <div class="album py-5 text-center container">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
