--- a/app/views/workouts/_searchbar.html.erb
+++ b/app/views/workouts/_searchbar.html.erb
@@ -1,12 +1,19 @@
 <div id="workouts_list">
-        <div class="d-flex justify-content-center align-items-center mt-5">
-            <%= form_with(url: workouts_path, method: :get, local: true, class: "w-50 me-3") do |form| %>
-            <%= form.collection_select :city_id, City.all, :id, :name, { prompt: "Sélectionner une ville" }, { class: "form-control", id: "city_select", data: { action: "change->workouts#update" } } %>
-        
-                <div class="d-flex justify-content-center">
-                    <%= form.submit "Afficher les résultats", class: "btn btn-primary mt-3" %>
-                </div>
-            <% end %>
-        </div>
+    <div class="d-flex justify-content-center align-items-center mt-5">
+        <%= form_with(url: workouts_path, method: :get, local: true, class: "w-50 me-3") do |form| %>
+        <%= form.collection_select :city_id, City.all, :id, :name, { prompt: "Sélectionner une ville" }, { class: "form-control", id: "city_select", data: { action: "change->workouts#update" } } %>
+
+        <%= form.label :start_date, "Date de début" %>
+        <%= form.date_field :start_date, class: "form-control" %>
+
+        <%= form.label :end_date, "Date de fin" %>
+        <%= form.date_field :end_date, class: "form-control" %>
+
+    <div class="d-flex justify-content-center">
+         <%= form.submit "Afficher les résultats", class: "btn btn-primary mt-3" %>
+    </div>
+        <% end %>
+</div>
+
 </div>
 
