--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -9,7 +9,11 @@
     <div class="card mb-2 border border-2" style="max-width: 100%">
         <div class="row g-0">
             <div class="col-md-4">
-                <%= image_tag 'logokeella.png', alt: "workout-image", class: "img-fluid" %>
+                <%if reservation.workout.image1.attached?%>
+                    <%= image_tag reservation.workout.image1, alt: "workout-image", class: "img-fluid" %>
+                <%else%>
+                    <%= image_tag 'logokeella.png', alt: "workout-image", class: "img-fluid" %>
+                <%end%>
             </div>
                 <div class="col-md-8">
                 <div class="card-body">
