--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="p-3 me-5 ms-5 border-0 bd-example row row-cols-1 row-cols-md-2 g-4">
     <div class="col"> 
-        <div class="card ms-auto me-auto" style="max-width: 22rem;">
+        <div class="card ms-auto text-center me-auto" style="max-width: 22rem;">
             <h3>Avatar actuel</h3>
                 <%if @user.avatar.attached?%>
                     <%= image_tag @user.avatar, alt: 'avatar' %>
