simple instance payment by strip ok, need to k, still need to manage payment lifecycle

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+
+    <!-- script to use stripe payment -->
+    <script src="https://js.stripe.com/v3/"></script>
+    
   </head>
 
   <body data-turbo="false">
