--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -39,6 +39,7 @@
                                 <%= button_to 'Relancer la demande', reservation_path(reservation, user_decision: "relaunched"), method: :patch, class: 'btn btn-secondary disabled' %>                            
                             <% elsif reservation.status == 'closed' %>
                                 <%= button_to 'Laisser un commentaire', '#', method: :get, class: 'btn btn-secondary disabled' %>
+                                <%= render 'rating' %>
                                 <%= button_to 'Laisser une note', '#', method: :get, class: 'btn btn-secondary disabled' %>
                             <% end %>
                         </div>
