--- a/app/views/workouts/show.html.erb
+++ b/app/views/workouts/show.html.erb
@@ -85,10 +85,14 @@
               <li>Date de fin : <strong><%= @workout.end_date.strftime("%d/%m/%Y %H:%M") %></strong></li>
             </ul>
             <div>
-              <% if @place_available > 0 %>
-                <%= button_to 'Envoyer une demande de réservation', workout_reservations_path(@workout), method: :post, class:"w-100 btn btn-lg btn-primary" %>
+              <% if @workout.is_free %>
+                <%= button_to 'Envoyer une demande de réservation gratuite', workout_reservations_path(@workout), method: :post, class:"w-100 btn btn-lg btn-primary" %>              
               <% else %>
-                <%= button_to "Il n'y a plus de place", workout_reservations_path(@workout), method: :post, class:"w-100 btn btn-lg btn-primary disabled" %>
+                <% if @place_available > 0 %>
+                  <%= button_to "Envoyer une demande de réservation #{@workout.price}€", workout_reservations_path(@workout), method: :post, class:"w-100 btn btn-lg btn-primary" %>
+                <% else %>
+                  <%= button_to "Il n'y a plus de place", workout_reservations_path(@workout), method: :post, class:"w-100 btn btn-lg btn-primary disabled" %>
+                <% end %>
               <% end %>
             </div>
           </div>
