--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -55,7 +55,11 @@
                  <td class="bg-tertiary"></td>
                     <td><%=reservation.user.email%></td>
                     <td>⭐️</td>
-                    <td><%=reservation.user.city.name%></td>
+                        <%if reservation.user.city != nil %>
+                            <td><%=reservation.user.city.name%></td>
+                        <%else%>
+                            <td>pas de ville</td>
+                        <%end%>
                     <td><%=reservation.status%></td>
                     <td></td>
                     <td></td>
