--- a/app/views/reservations/_rating.html.erb
+++ b/app/views/reservations/_rating.html.erb
@@ -1,11 +1,22 @@
 <div class="btn-group-vertical" role="group" aria-label="Vertical button group">
-<div class="btn-group" role="group">
+  <div class="btn-group" role="group">
     <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-      Dropdown
+      Laisse une note
     </button>
     <ul class="dropdown-menu">
-      <li><a class="dropdown-item" href="#">Dropdown link</a></li>
-      <li><a class="dropdown-item" href="#">Dropdown link</a></li>
+      <% @reservations.each do |reservation| %>
+        <% if reservation.status == 'closed' %>
+          <%= form_with(model: reservation, url: rate_host_reservation_path(reservation), method: :patch, local: true) do |form| %>
+            <%= form.label :host_rating, 'Note pour le host' %>
+            <% 5.times do |i| %>
+              <%= form.radio_button :host_rating, i + 1 %>
+              <i class="bi bi-star-fill"></i>
+            <% end %>
+            <%= form.submit 'Noter le host' %>
+          <% end %>
+        <% end %>
+      <% end %>
     </ul>
   </div>
 </div>
+
