--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -41,7 +41,7 @@
                                 
                                 <%= button_to 'Laisser un commentaire', '#', method: :get, class: 'btn btn-secondary disabled' %>
                                 
-                                    <%= render 'rating' %>
+                                    #<%= render 'rating' %>
                                     
                                 
                                 <%= button_to 'Laisser une note', '#', method: :get, class: 'btn btn-secondary disabled' %>
