--- a/app/views/workouts/show.html.erb
+++ b/app/views/workouts/show.html.erb
@@ -74,30 +74,29 @@
       <div class="col col-md-4 mt-2">
         <div class="card shadow">
           <div class="card-body">
+            <%= turbo_frame_tag "places-available" do %>
             <div class="d-flex">
               <h5 class="card-title me-1"><%= @workout.price %>€</h5>
               <span class="card-title">par séance</span>
             </div>
             <h6>Nombre de participant maximum : <%= @workout.participant_number %></h6>
-            <%= turbo_frame_tag "places_available" do %>
-            <span><%= render "workouts/places_available", places_available: @workout.places_available%></span>
-            <% end %> 
-            
+            <%= render "places_available", workout: @workout %>            
             <ul>
               <li>Date de début : <strong><%= @workout.start_date.strftime("%d/%m/%Y %H:%M") %></strong></li>
               <li>Date de fin : <strong><%= @workout.end_date.strftime("%d/%m/%Y %H:%M") %></strong></li>
             </ul>
             <div>
               <% if @workout.is_free %>
-                <%= button_to 'Envoyer une demande de réservation gratuite', workout_reservations_path(@workout), method: :post, data:{turbo_frame: "places_available"}, class:"w-100 btn btn-lg btn-primary" %>              
+                <%= button_to 'Envoyer une demande de réservation gratuite', workout_reservations_path(@workout), method: :post, data:{turbo_frame: "places-available"}, class:"w-100 btn btn-lg btn-primary" %>              
               <% else %>
                 <% if @workout.places_available > 0 %>
-                  <%= button_to "Envoyer une demande de réservation #{@workout.price}€", workout_reservations_path(@workout), method: :post, data:{turbo_frame: "places_available"}, class:"w-100 btn btn-lg btn-primary" %>
+                  <%= button_to "Envoyer une demande de réservation #{@workout.price}€", workout_reservations_path(@workout), method: :post, data:{turbo_frame: "places-available"}, class:"w-100 btn btn-lg btn-primary" %>
                 <% else %>
-                  <%= button_to "Il n'y a plus de place", workout_reservations_path(@workout), method: :post, data:{'turbo-frame': "places_available"}, class:"w-100 btn btn-lg btn-primary disabled" %>
+                  <%= button_to "Il n'y a plus de place", workout_reservations_path(@workout), method: :post, data:{turbo_frame: "places-available"}, class:"w-100 btn btn-lg btn-primary disabled" %>
                 <% end %>
               <% end %>
             </div>
+            <% end %>
           </div>
         </div>
       </div>
