--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -65,20 +65,37 @@
                     <td></td>
                     <td></td>
                 <td>
-                <div class="btn-group">
-                    <%= link_to "Consulter la page Profil", user_path(reservation.user), class: 'btn btn-success btn-sm'%>
-                    <% if reservation.status == "pending"%>
-                        <%= link_to "Accepter/refuser la reservation", edit_user_reservation_path(workout,reservation), class: 'btn btn-warning btn-sm'%>
-                    <% else%>
-                        <%= link_to "Accepter/refuser la reservation 🔒", edit_user_reservation_path(workout,reservation), class: 'btn btn-warning btn-sm disabled'%>
-                    <%end%> 
-                </div>
+                    <div class="btn-group">
+                        <%= link_to "Consulter la page Profil", user_path(reservation.user), class: 'btn btn-success btn-sm'%>
+                        <% if reservation.status == "pending" %>
+                            <%= link_to "Accepter/refuser la reservation", edit_user_reservation_path(workout,reservation), remote: true, class: 'btn btn-warning btn-sm', id: 'toggle-dropdown'%>
+                        <% else %>
+                            <%= link_to "Accepter/refuser la reservation 🔒", edit_user_reservation_path(workout,reservation), class: 'btn btn-warning btn-sm disabled'%>
+                        <% end %> 
+                        <% if reservation.status == "pending" %>
+                            <div class="dropdown" id="edit-people-dropdown">
+                                <%= turbo_frame_tag "edit-people" do %>
+                                    <%= render "edit-people", reservation: @reservation, user: reservation.user %>
+                                <% end %>
+                            </div>
+                        <% end %>
+                    </div>
                 </td>
-                </tr>
-     
-                <%end%>         
+                </tr>       
+                <%end%> 
         <%end%>
           </tbody>
         </table>
     </div>
 </section>
+
+<script>
+    document.addEventListener("turbo:load", function() {
+        const toggleDropdown = document.getElementById("toggle-dropdown");
+        const editPeopleDropdown = document.getElementById("edit-people-dropdown");
+
+        toggleDropdown.addEventListener("click", function() {
+            editPeopleDropdown.classList.toggle("show");
+        });
+    });
+</script>
