front img fixes

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -8,7 +8,7 @@
   <div class="row justify-content-center align-items-center " >
     <h1 class="text-center mt-5" >Vous disposez d'équipements sportifs de qualité et vous souhaitez les partager avec la communauté ?</h1>
     <div class="card border-0 d-flex justify-content-center mb-4">
-      <%=  image_tag "landing_page2.png", alt: "image de profile" %>
+      <%=  image_tag "landing_page2.jpg", alt: "image de profile" %>
     </div>
     <div class="d-flex justify-content-center">
       <%= link_to "Proposez vos équipements à la communauté", new_workout_path, class: "btn btn-outline-secondary btn-lg m-0" %>
